2004-10-28 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/system.cpp:  Removed some debugging
	output.

2004-10-28 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/system.cpp:  Fixed HTTP request line
	endings to be CRLF; added "Host" line.

2004-09-23 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc:  Updates for parity
	with libopenvrml changes.

2004-09-21 Braden McDaniel  <braden@endoframe.com>

	Doc-comment improvements.

	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2004-09-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.h:  Removed spurious
	"return" in function returning "void".

2004-09-17 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile.in:  Don't generate documentation for "internal"
	doc-comments.

2004-09-17 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Changed
	DefaultViewpoint class to default_viewpoint; moved to unnamed
	namespace.
	* src/libopenvrml/openvrml/browser.h:  Changed
	browser::default_viewpoint to browser::default_viewpoint_.

2004-09-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Moved proto_node,
	proto_node_class member definitions to unnamed namespace.

2004-08-30 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp:  Moved proto_node,
	proto_node_class to unnamed namespace (from openvrml).

2004-08-30 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/gtkvrml/vrmlbrowser.cc:  Added nothrow
	exception specification to GtkGLViewer::~GtkGLViewer.

2004-07-24 Braden McDaniel  <braden@endoframe.com>

	* src/lookat/lookat.cpp:  Instantiate the viewer before the